automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,6 +6,8 @@
   </head>
 
   <body>
-    
+    <form method="POST" action="/display_puppy">
+      <input type="text" name="name">
+    </form>
   </body>
 </html>
