automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <form method="POST" action="/display_puppy">
+    <form method="POST" action="/new">
       <input type="text" name="name">
     </form>
   </body>
