--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,6 +8,7 @@
   <body>
     <form method="POST" action="/new">
       <input type="text" name="name">
+      <input type="text" name="breed">
     </form>
   </body>
 </html>
