automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,6 +9,8 @@
     <form method="POST" action="/new">
       <input type="text" name="name">
       <input type="text" name="breed">
+      
+      <input type="submit">
     </form>
   </body>
 </html>
