automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,7 +9,7 @@
     <form method="POST" action="/new">
       <input type="text" name="name">
       <input type="text" name="breed">
-      
+      <input type="number" name="age">
       <input type="submit">
     </form>
   </body>
