automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -10,7 +10,7 @@
       <input type="text" name="name">
       <input type="text" name="breed">
       <input type="number" name="age">
-      <input type="submit">
+      <input type="submit" name="submit">
     </form>
   </body>
 </html>
