--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -6,6 +6,9 @@
   </head>
 
   <body>
-    <h1>The Ultimate String Reverser</h1>
+    <h1>Here is a Puppy!</h1>
+    <h2>Puppy Name:\n<%=@new_pup.name%></h2>
+    <h2>Puppy Breed:\n<%=@new_pup.breed%></h2>
+    <h2>Puppy Age:\n<%=@new_pup.age%></h2>
   </body>
 </html>
