automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -7,7 +7,8 @@
 
   <body>
     <h1>Here is a Puppy!</h1>
-    <h2>Puppy Name:\n<%=@new_pup.name%></h2>
+    <h2>Puppy Name:</h2>
+    <h2><%=@new_pup.name%></h2>
     <h2>Puppy Breed:\n<%=@new_pup.breed%></h2>
     <h2>Puppy Age:\n<%=@new_pup.age%></h2>
   </body>
