automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -9,7 +9,9 @@
     <h1>Here is a Puppy!</h1>
     <h2>Puppy Name:</h2>
     <h2><%=@new_pup.name%></h2>
-    <h2>Puppy Breed:\n<%=@new_pup.breed%></h2>
-    <h2>Puppy Age:\n<%=@new_pup.age%></h2>
+    <h2>Puppy Breed:</h2>
+    <h2><%=@new_pup.breed%></h2>
+    <h2>Puppy Age:</h2>
+    <h2><%=@new_pup.age%></h2>
   </body>
 </html>
