--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -7,9 +7,9 @@
 
   <body>
     <form method="POST" action="/new">
-      <input type="text" name="name">
-      <input type="text" name="breed">
-      <input type="number" name="age">
+      <label>Name:<input type="text" name="name"></label>
+      <label>Breed:<input type="text" name="breed"></label>
+      <label>Age:<input type="number" name="age"></label>
       <input type="submit" value="submit">
     </form>
   </body>
