--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -8,10 +8,10 @@
   <body>
     <h1>Here is a Puppy!</h1>
     <h2>Puppy Name:</h2>
-    <h2><%=@new_pup.name%></h2>
+    <p><%=@new_pup.name%></p>
     <h2>Puppy Breed:</h2>
-    <h2><%=@new_pup.breed%></h2>
+    <p><%=@new_pup.breed%></p>
     <h2>Puppy Age:</h2>
-    <h2><%=@new_pup.age%></h2>
+    <p><%=@new_pup.age%></p>
   </body>
 </html>
