automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -7,11 +7,11 @@
 
   <body>
     <h1>Here is a Puppy!</h1>
-    <h2>Puppy Name:</h2>
-    <p><%=@new_pup.name%></p>
-    <h2>Puppy Breed:</h2>
-    <p><%=@new_pup.breed%></p>
-    <h2>Puppy Age:</h2>
-    <p><%=@new_pup.age%></p>
+    <p>Puppy Name:</p>
+    <h2><%=@new_pup.name%></h2>
+    <p>Puppy Breed:</p>
+    <h2><%=@new_pup.breed%></h2>
+    <p>Puppy Age:</p>
+    <h2><%=@new_pup.age%></h2>
   </body>
 </html>
